# crackunigeweb

./: .gitignore  3D image - Flexible.ipynb  Aptfile  README.md  about2_working.html  index.html  pyproject.toml  requirements.txt  server.py  webapp.py
.ipynb_checkpoints/: 3D image - Flexible-checkpoint.ipynb  webapp-checkpoint.py
assets/css/: main.css
myFunctions/: patches.py  reconstruct.py
static/css/: main.css
templates/: index.html
