[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Crackunige"
version = "0.1.0"
description = "Your project description"
authors = ["MohammedElmustafa Eid"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"


[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

